Update: Menu and Menu Item fix. Menu Items now vertical on Web and Horizontal on Mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -363,6 +363,10 @@ a:hover {
     transition: 250ms ease-out;
 }
 
+
+
+
+
 @media(max-width: 900px) {
 
 body {
@@ -382,7 +386,7 @@ body {
 }
 
 .menu {
-    display: flex;
+    display: flexbox;
     background-color: #161719;
     filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.363));
     position: fixed;
@@ -390,36 +394,29 @@ body {
     width: 100%;
     height: 4rem;
     border-radius: 1px 1px 10px 10px;
-    z-index: 1000;
+    z-index: 500;
     transition: transform 200ms ease-out;
     text-wrap: balance;
     background-color: var(--menu_box-color);
     margin-left: auto;
     margin-right: auto;
-    margin-top: -10px;
+    margin-top: -.8rem;
     padding: 2px;
+
+    justify-content: space-between;
 }
 
 .menu_item {
     float: right;
-    top: 0;
-    line-height: .5;
+    line-height: 1;
     display: flex;
-    background-color: #161719;
-    filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.363));
-    position: fixed;
     opacity: 95%;
-    width: 100%;
-    height: 4rem;
     border-radius: 1px 1px 10px 10px;
-    z-index: 1000;
+    z-index: 999;
     transition: transform 200ms ease-out;
     text-wrap: balance;
-    background-color: var(--menu_box-color);
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -10px;
-    padding: 2px;
+    padding: .25rem;
+    overflow: hidden;
 }
 
 br.menu_breaks {
@@ -446,7 +443,7 @@ br.menu_breaks {
     margin-left: auto;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 
-    border-radius: calc(var(--radius) - 25px);
+    border-radius: var(--radius) + 25;
 }
 
 .post_card {
